add the salt script for pswd for db, the authentification and the function isauthorize and the routes logout and modified the swagger to add the logout
